Style, update info-tour. Fix z-index of info-tour.

--- a/lizard_map/static/lizard_map/lizard_map.css
+++ b/lizard_map/static/lizard_map/lizard_map.css
@@ -23,3 +23,18 @@
 .popover.left .arrow-info{
   right: -10px !important;
 }
+
+.popover[class*=tour-] {
+  z-index: 1999;
+}
+
+#box-awesome {
+position: fixed;
+	z-index: 1998;
+	top: 50px;
+	left: 11px;
+}
+
+#logo-row {
+  z-index: 1998 !important;
+}
